--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,7 +31,11 @@
 
   <section>
     <h2>Introduction</h2>
-    <p>This is the introductory section of the webpage. Here, you'll get an overview of what this site is about.</p>
+    <p>
+      سوره ق، آیات ۹ تا ۱۱، ۱۲ تا ۱۴، ۲۴ تا ۲۶ (و شاید آیات دیگر) دارای الگویی هستند که با حرف «ق» شروع می‌شود، دوری می‌زند و به نقطهٔ آغازین خود برمی‌گردد.
+کل سوره ق هم مثل حرف ق یک دور می‌زند. آیات انتهایی به آیات ابتدایی برمی‌گردد.
+ذَٰلِكَ رَجْعٌ بَعِيدٌ شاید اشاره ای به همان ساختار حلقوی دارد.
+</p>
   </section>
 
   <section>
