--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" "direction: rtl;">
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +11,7 @@
       margin: 40px;
       background-color: #f9f9f9;
       color: #333;
+      direction: rtl;
     }
     section {
       margin-bottom: 40px;
@@ -18,6 +19,7 @@
       background-color: #fff;
       border-left: 5px solid #007acc;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      direction: rtl;
     }
     h2 {
       margin-top: 0;
