--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Simple Webpage</title>
   <style>
+    @font-face {
+              font-family: 'KFGQPC Uthman Taha Naskh';
+              src: url('fonts/KFGQPC Uthman Taha Naskh Regular.ttf') format('truetype');
+              font-weight: normal;
+              font-style: normal;
+                }
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
@@ -12,6 +18,7 @@
       background-color: #f9f9f9;
       color: #333;
       direction: rtl;
+      font-family:"KFGQPC Uthman Taha Naskh"
     }
     section {
       margin-bottom: 40px;
@@ -20,6 +27,7 @@
       border-left: 5px solid #007acc;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       direction: rtl;
+      font-family:"KFGQPC Uthman Taha Naskh"
     }
     h2 {
       margin-top: 0;
