--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     @font-face {
               font-family: 'KFGQPC Uthman Taha Naskh';
-              src: url('fonts/KFGQPC Uthman Taha Naskh Regular.ttf') format('truetype');
+              src: url('KFGQPC Uthman Taha Naskh Regular.ttf') format('truetype');
               font-weight: normal;
               font-style: normal;
                 }
