--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
               font-style: normal;
                 }
     body {
-      font-family: Arial, sans-serif;
       line-height: 1.6;
       margin: 40px;
       background-color: #f9f9f9;
       color: #333;
       direction: rtl;
-      font-family:"KFGQPC Uthman Taha Naskh"
+      font-family:"KFGQPC Uthman Taha Naskh";
     }
     section {
       margin-bottom: 40px;
@@ -26,8 +25,6 @@
       background-color: #fff;
       border-left: 5px solid #007acc;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      direction: rtl;
-      font-family:"KFGQPC Uthman Taha Naskh"
     }
     h2 {
       margin-top: 0;
