--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       color: #333;
       direction: rtl;
       font-family:"KFGQPC Uthman Taha Naskh";
+      font-size: 4.5mm;
     }
     section {
       margin-bottom: 40px;
@@ -37,7 +38,7 @@
   <h1>Welcome to My Page</h1>
 
   <section>
-    <h2>Introduction</h2>
+    <h2>سوره ق</h2>
     <p>
       سوره ق، آیات ۹ تا ۱۱، ۱۲ تا ۱۴، ۲۴ تا ۲۶ (و شاید آیات دیگر) دارای الگویی هستند که با حرف «ق» شروع می‌شود، دوری می‌زند و به نقطهٔ آغازین خود برمی‌گردد.
 کل سوره ق هم مثل حرف ق یک دور می‌زند. آیات انتهایی به آیات ابتدایی برمی‌گردد.
@@ -46,8 +47,10 @@
   </section>
 
   <section>
-    <h2>About Me</h2>
-    <p>I am a passionate developer who enjoys building web applications and learning new technologies.</p>
+    <h2>>یونس و حوت</h2>
+    <p>یونس و حوت داریم و در سورهٔ کهف هم کنار حوت نسیان داریم. شاید ارتباطی بین یونس و نسیان باشد. و شاید ارتباطی بین نسیان و حوت.
+می‌گویند همراه موسی در سورهٔ کهف یوشَعَ بن نون بوده. یک لقب حضرت یونس در قرآن ذَا النُّون است. یک بار هم در سورهٔ ن وَالْقَلَمِ به حضرت یونس اشاره شده.
+</p>
   </section>
 
   <section>
