--- a/index.html
+++ b/index.html
@@ -46,21 +46,30 @@
 </p>
   </section>
 
+   <section>
+    <h2>لَدَی</h2>
+    <p>در سورهٔ ق با فاصله، بیشترین استفاده از لغت لَدَی شده است.</p>
+  </section>
+
   <section>
-    <h2>>یونس و حوت</h2>
+    <h2>یونس و حوت</h2>
     <p>یونس و حوت داریم و در سورهٔ کهف هم کنار حوت نسیان داریم. شاید ارتباطی بین یونس و نسیان باشد. و شاید ارتباطی بین نسیان و حوت.
 می‌گویند همراه موسی در سورهٔ کهف یوشَعَ بن نون بوده. یک لقب حضرت یونس در قرآن ذَا النُّون است. یک بار هم در سورهٔ ن وَالْقَلَمِ به حضرت یونس اشاره شده.
 </p>
   </section>
 
   <section>
-    <h2>Projects</h2>
-    <p>Here are some of the projects I’ve worked on recently. Each one taught me something new and valuable.</p>
-  </section>
+    <h2>هم اوایی</h2>
+    <p>یا أَسَفىٰ عَلىٰ یوسُفَ، 
 
-  <section>
-    <h2>Contact</h2>
-    <p>If you'd like to get in touch, feel free to reach out via email or through my social media links.</p>
+وَأَسلَمتُ مَعَ سُلَیمانَ  
+و  
+وَمَریَمَ ابنَتَ عِمرَانَ الَّتِی أَحصَنَت فَرجَها + الَّذینَ یَرمونَ المُحصَنات
+
+هم اوایی وجود دارد که بتواند اسامی انتخاب‌شده را هم معنا کند یا چیز دیگری.
+
+مَا وَصَّىٰ بِهِ نُوحًا وَالَّذِي أَوْحَيْنَا إِلَيْكَ
+</p>
   </section>
 
 </body>
