--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 
   <section>
     <h2>هم اوایی</h2>
-    <p>یا أَسَفىٰ عَلىٰ یوسُفَ، 
-
+    <p>یا أَسَفىٰ عَلىٰ یوسُفَ
+      <br>
 وَأَسلَمتُ مَعَ سُلَیمانَ  
-و  
+<br>
 وَمَریَمَ ابنَتَ عِمرَانَ الَّتِی أَحصَنَت فَرجَها + الَّذینَ یَرمونَ المُحصَنات
-
+<br>
 هم اوایی وجود دارد که بتواند اسامی انتخاب‌شده را هم معنا کند یا چیز دیگری.
-
+<br>
 مَا وَصَّىٰ بِهِ نُوحًا وَالَّذِي أَوْحَيْنَا إِلَيْكَ
 </p>
   </section>
