--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Simple Webpage</title>
+  <title>نظر</title>
   <style>
     @font-face {
               font-family: 'KFGQPC Uthman Taha Naskh';
