--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 
-  <h1>Welcome to My Page</h1>
+  <h1>بِسْمِ اللَّهِ الرَّحْمَـٰنِ الرَّحِيمِ</h1>
 
   <section>
     <h2>سوره ق</h2>
