--- a/index.html
+++ b/index.html
@@ -72,5 +72,32 @@
 </p>
   </section>
 
+  <section>
+    <h2>گوینده پیامبر</h2>
+    <p>در آیهٔ ۱۰ سورهٔ شوری:
+وَمَا اخْتَلَفْتُمْ فِيهِ مِن شَيْءٍ فَحُكْمُهُ إِلَى اللَّهِ ۚ ذَٰلِكُمُ اللَّهُ رَبِّي عَلَيْهِ تَوَكَّلْتُ وَإِلَيْهِ أُنِيبُ
+ناگهان گوینده پیامبر می‌شود. شاید این تغییر مرتبط باشد با این که در ادامه می‌گوید این‌گونه به تو وحی می‌کنیم، مثل عبارت أَوْحَيْنَا إِلَيْكَ در آیات ۷ و ۱۳ همان سوره. و ۳و ۵۲
+این پیوستگی بین تغییر لحن گوینده و وحی می‌تواند نشانهٔ جایگاه خاص پیامبر در دریافت وحی باشد.
+</p>
+  </section>
+
+  <section>
+    <h2>رعد و شوری</h2>
+    <p>خیلی مطمئن نیستم: شاید ارتباط خاصی بین سورهٔ رعد و شوری بتوان یافت.</p>
+  </section>
+
+   <section>
+    <h2>طلاق و تحریم</h2>
+    <p>در ابتدای سورهٔ طلاق، مخاطب پیامبر است. شاید به این دلیل که ارتباطی با سورهٔ تحریم دارد و تهدید به طلاق در سورهٔ تحریم نزدیک به عمل بوده است.</p>
+  </section>
+
+   <section>
+    <h2>آیهٔ ۳۳ سورهٔ رعد</h2>
+    <p>در آیهٔ ۳۳ سورهٔ رعد:
+أَفَمَنْ هُوَ قَائِمٌ عَلَىٰ كُلِّ نَفْسٍ بِمَا كَسَبَتْ ۗ وَجَعَلُوا لِلَّهِ شُرَكَاءَ قُلْ سَمُّوهُمْ ۚ أَمْ تُنَبِّئُونَهُ بِمَا لَا يَعْلَمُ فِي الْأَرْضِ أَمْ بِظَاهِرٍ مِّنَ الْقَوْلِ ۗ
+ابتدای آیه ادامه پیدا نکرده، زیرا از چیزهایی که برای خدا شریک می‌پندارند، نه علمی وجود دارد و نه حتی اسمی که واقعی باشد. این آیه به روشنی بیان می‌کند که این شرکا در حقیقت وجود ندارند و تنها زادهٔ خیال و ادعاهای باطل هستند.
+</p>
+  </section>
+
 </body>
 </html>
