--- a/index.html
+++ b/index.html
@@ -99,5 +99,53 @@
 </p>
   </section>
 
+  <section>
+    <h2>حدید</h2>
+    <p>حدید چیزی است که با آن می‌توان حد دقیق (مرز، لبه) درست کرد. مثل "ریح" و "ماء" نیست که سیال باشند و جامد است. مثل "حجر" شکننده نیست و مثل "قطر" نرم نیست. با حدید (مانند شمشیر و ...) حدود حفظ می‌شود.
+الَّذِينَ يُحَادُّونَ اللَّهَ وَرَسُولَهُ اشاره به کسانی دارد که مرزهایی غیر از مرزهای خدا و رسولش می‌کشند. یعنی آن‌ها در مقابل حدود الهی ایستاده و تلاش می‌کنند حد و مرز دیگری را به جای آن بگذارند.
+این ارتباط میان "حدید" و "یحادون" جالب است، چرا که هر دو به مفهوم مرز و حدود اشاره دارند؛ یکی برای حفظ و دیگری برای مخالفت.
+</p>
+  </section>
+
+  <section>
+    <h2>عَدُوّ ضد دعوت</h2>
+    <p>عَدُوّ ضد دعوت است.</p>
+  </section>
+
+   <section>
+    <h2>ماء و دار در سوره رعد</h2>
+    <p>لغت‌ ماء و دار در سوره رعد زیاد و جالب است.</p>
+  </section>
+
+  <section>
+    <h2>شورا و رعد</h2>
+    <p>آیه ۵ سوره شورا و ۱۳ سوره رعد مشابهاتی دارند.</p>
+  </section>
+
+  <section>
+    <h2>طه و رعد</h2>
+    <p>سوره طه و شورا بیشترین میزان لغت وحی را دارند.</p>
+  </section>
+
+  <section>
+    <h2>آیه ۱۳ و ۷۸ سوره حج</h2>
+    <p>انتهای آیه ۱۳ و آیه ۷۸ سوره حج شبیه است.</p>
+  </section>
+
+  <section>
+    <h2>"ولی" و "اولیاء" در سوره شوری</h2>
+    <p>بیشترین مجموعه "ولی" و "اولیاء" در سوره شوری آمده است.</p>
+  </section>
+
+  <section>
+    <h2>شاء در شورا</h2>
+    <p>سوره شورا بیشترین چگالی شاء را دارد. البته به جز سوره تکویر (احتمالاً) که البته آن سوره کوتاه است.</p>
+  </section>
+
+  <section>
+    <h2>سوره علق و قارون</h2>
+    <p>در سوره علق، اشاره به طغیان انسان پس از این‌که خدا به او تعلیم داد، یادآور قارون است که می‌گوید: "إِنَّمَا أُوتِيتُهُ عَلَىٰ عِلْمٍ عِندِي".</p>
+  </section>
+
 </body>
 </html>
