--- a/index.html
+++ b/index.html
@@ -147,5 +147,72 @@
     <p>در سوره علق، اشاره به طغیان انسان پس از این‌که خدا به او تعلیم داد، یادآور قارون است که می‌گوید: "إِنَّمَا أُوتِيتُهُ عَلَىٰ عِلْمٍ عِندِي".</p>
   </section>
 
+  <section>
+    <h2>علق و الرحمن</h2>
+    <p>اول سوره علق در مورد خلق و تعلیم شباهت دارد به اول سوره الرحمن.</p>
+  </section>
+
+  <section>
+    <h2>طور و نجم</h2>
+    <p>سوره طور و نجم، هریک ۳ تا لغت "اولیٰ" دارند که بیشترین این لغت در سوره‌های قرآن است.</p>
+  </section>
+
+  <section>
+    <h2>آیه ۲ سوره نحل</h2>
+    <p>در آیه ۲ سوره نحل، در مخاطب جمله، خداوند دارد مستقیم وحی می‌کند به همه. هم‌آهنگ با آیه ۶۸ که خداوند به نحل وحی می‌کند.</p>
+  </section>
+
+  <section>
+    <h2>آیه ۲ و ۵۱ سوره نحل</h2>
+    <p>در سوره نحل آیه ۲ و آیه ۵۱ از لحاظ گوینده و مخاطب قابل توجه هست.</p>
+  </section>
+
+  <section>
+    <h2>سوره ملک"ر" و"م"</h2>
+    <p>در سوره ملک، ۲۱ آیه اول همه به "ر" ختم می‌شوند. و پس از آن، همه آیات به "م" یا "ن" ختم می‌شوند.</p>
+  </section>
+
+  <section>
+    <h2>در سوره قلم "ن"</h2>
+    <p>در سوره قلم که حرف مقطعه "ن" دارد، همه آیه‌ها با "ن" یا "م" ختم می‌شوند.</p>
+  </section>
+
+  <section>
+    <h2>سوره حاقه"ن" و"م"</h2>
+    <p>سوره حاقه تا آیه ۳۲ به "ه" ختم می‌شود و بعد از آن به "ن" یا "م".</p>
+  </section>
+
+  <section>
+    <h2>یونس</h2>
+    <p>ما یک قوم داریم که براشون پیامبر اومد و هدایت شدن. همون قومی که پیامبرشون زودتر از موعد خارج شد.
+شاید توضیح این ماجرا این باشه که اقوام توسط پیامبرانشون هدایت و دعوت می‌شن. اگر کار به یک نقطه‌ی صفر برسه (که گویا همواره می‌رسه) که در اون تکلیف همه مشخصه: یک عده هدایت‌شده هستن، و یک عده منحرف که حجت هم براشون تمام شده (یعنی اصلاً قصدی برای هدایت شدن ندارن)، در این شرایط گروه اول جدا می‌شن و گروه دوم از بین می‌رن.
+در ماجرای حضرت یونس (ع)، چون ایشون زودتر خارج شدن، کار به نقطه‌ی اپسیلون نزدیک به صفر رسیده ولی کامل صفر نشده. در اینجا، برای این‌که کسی مورد ظلم واقع نشه، از طریق هدایت تکوینی—اون هدایت درونی که عملاً چیزی نیست که خیلی قرار باشه توی دنیا رخ بده—استثنائاً اینجا اون قوم یک قدم به جلو آورده می‌شن و در نتیجه‌ی اون، عذاب هم رفع می‌شه. مثل وقتی که مثلاً سه ماه آخر سال یه‌هو معلم ریاضی یک کلاس مشکل پیدا می‌کرد و نمی‌اومد و کلاس بی‌معلم می‌موند. وقت امتحان آخر، به اون کلاس دو نمره اضافه می‌دادن یا این‌که کلاً کلاس رو پاس می‌کردن که یه‌هو به خاطر کمبودی از طرف سیستم آموزشی کسی متضرر نشه :)
+به این تعبیر، در آیات ۹۸ و ۹۹ سوره یونس:
+"فَلَوْلَا كَانَتْ قَرْيَةٌ آمَنَتْ فَنَفَعَهَا إِيمَانُهَا إِلَّا قَوْمَ يُونُسَ لَمَّا آمَنُوا كَشَفْنَا عَنْهُمْ عَذَابَ ٱلْخِزْىِ فِى ٱلْحَيَوٰةِ ٱلدُّنْيَا وَمَتَّعْنَٰهُمْ إِلَىٰ حِينٍۢ"
+(پس چرا [هیچ‌] شهری نبود که ایمان آورد، پس ایمانش به او سود بخشد؟ مگر قوم یونس که چون ایمان آوردند، عذاب خوارکننده را در زندگی دنیا از آنان برداشتیم و تا چندی آنان را برخوردار ساختیم.)
+"وَلَوْ شَآءَ رَبُّكَ لَـَٔامَنَ مَن فِى ٱلْأَرْضِ كُلُّهُمْ جَمِيعًۭا ۚ أَفَأَنتَ تُكْرِهُ ٱلنَّاسَ حَتَّىٰ يَكُونُوا۟ مُؤْمِنِينَ"
+(و اگر پروردگارت می‌خواست، هر که در زمین است، همگی یک‌سره ایمان می‌آوردند. آیا تو مردم را ناگزیر می‌کنی تا مؤمن شوند؟)
+در کنار این‌که گفته می‌شه ای کاش همه‌تون مثل قوم یونس هدایت می‌شدید، داره می‌فرماید که این نمونه‌ای از هدایت درونی تکوینی ماست که در صورت اعمالش، همه رو می‌تونیم باهاش هدایت کنیم. و چه بسا انتهای آیه ۹۸ که می‌فرماید "كَشَفْنَا عَنْهُمْ عَذَابَ ٱلْخِزْىِ فِى ٱلْحَيَوٰةِ ٱلدُّنْيَا وَمَتَّعْنَٰهُمْ إِلَىٰ حِينٍۢ"، نشون می‌ده که خیلی هم اتفاق  خفنی نیفتاده؛ در حد همون دو نمره‌ی اضافه، یا این‌که همه صرفاً پاس بشن بوده.
+<br>
+      در مورد شخص حضرت یونس (ع)، من تحقیقی که کردم، هیچ جا ندیدم که اتفاقات بدی که افتاده به خدا یا عالم بالا نسبت داده شده باشه؛ فاعل اون جملات سخت یا خود حضرت یونس (ع) هستن، یا ماهی، یا این‌که جمله فاعل نداره. فاعل قسمت های نجات عالم بالاست.
+بر این اساس، اگر بخوایم داستان رو به‌صورت کوتاه با لحنی شبیه لحن قرآن تعریف کنیم، این‌طور می‌شه:
+یونس اون‌قدر که باید صبر نکرد و خودش رو در شرایطی انداخت که ماهی بلعیدش. و چون آدم خوبی بود، ما نجاتش دادیم و براش شرایط سر حال شدن مهیا کردیم و فرستادیمش مجدداً عده‌ی زیادی رو هدایت کنه. اگر این‌طور نبود، تا آخر توی شکم ماهی می‌موند.
+
+نه این لحن که یونس چون صبر نکرد، ما انداختیمش توی شکم ماهی که تنبیه بشه.
+      <br>
+      دوره‌ی آموزشی و آمادگی یوسف (ع) در مسیر چاه و زندان بود، دوره‌ی آموزشی موسی (ع) در آن آوارگی و پیش حضرت خضر (ع) بود، دوره‌ی آموزشی یونس (ع) در شکم ماهی بود. و سختی خارق العاده ش هم به این ربط داره که خودش این کارو کرد، نه این‌که ما ببریمش توی این مسیر.
+    </p>
+  </section>
+
+   <section>
+    <h2>"ن"</h2>
+    <p>با استفاده از ذَا ٱلنُّونِ به معنی کلمه‌ای که حرف "ن" داره، شاید بشه شبکه‌ی معنایی کلمات، یا نماد، یا حرف خاصی پیدا کرد.</p>
+  </section>
+
+   <section>
+    <h2>نحل ریشه‌های</h2>
+    <p>در سوره نحل، ریشه‌های "نزل"، "خلق"، "جعل"، "نعمت" و "آیت" از طرف خدا هر کدام ۱۱ بار تکرار شده. همین طور عذب. هدی و کفر هم ۱۲ با آمده</p>
+  </section>
+
 </body>
 </html>
