--- a/index.html
+++ b/index.html
@@ -210,8 +210,42 @@
   </section>
 
    <section>
-    <h2>نحل ریشه‌های</h2>
+    <h2>ریشه‌های نحل</h2>
     <p>در سوره نحل، ریشه‌های "نزل"، "خلق"، "جعل"، "نعمت" و "آیت" از طرف خدا هر کدام ۱۱ بار تکرار شده. همین طور عذب. هدی و کفر هم ۱۲ با آمده</p>
+  </section>
+
+  <section>
+    <h2>ص ۱</h2>
+    <p>برداشت بنده برگفته از جلسه سوم:
+
+سلیمان فکر می‌کرد(۱) که این قدرت برخاسته از اسب‌ها و امثالهم می‌تواند نقش مهمی در خدمت پروردگار داشته باشد و با این ذهنیت بسیار مشغول آن‌ها بود، تماشا می‌کرد، دست می‌کشید و ... . خداوند با نشانه‌ی جسد روی کرسی به او متذکر شد که اثرگذاری مثبت هر شیء برگرفته از روح الهی است (جنبه‌ی الهی هر شیء که حیات و علم و قدرت و همه‌ی صفات مثبتش از آن می‌آید)(۲). جسد حتی روی کرسی پادشاهی هم باشد، کاری ازش بر نمی‌آید. قدرت سلیمان روی کرسی هم به واسطه روح الهی اوست. برای همه چیز هم همین‌طور است (اسب‌ها و ...). وقتی سلیمان با این تذکر خوب متذکر شد، صلاحیت امکاناتی بیش از حد اسب و امثالهم را پیدا کرد. پس برای خدمت خدا آن‌ها را درخواست کرد و (بخشی از آن را)(۳) دریافت هم کرد.
+
+۱- "فکر می‌کرد": مثل یونس که فکر نمی‌کرد در حال انجام کاری است که موجب سخت گرفتن بر او شود (فَظَنَّ أَنْ لَنْ نَقْدِرَ عَلَيْهِ).  
+
+۲- مثل جنگ حنین که قدرت مادی مسلمانان که برای خودشون هم شگفت انگیز بود براشون کاری نکرد (وَلَقَدْ نَصَرَكُمُ اللَّهُ فِي مَوَاطِنَ كَثِيرَةٍ ۙ وَيَوْمَ حُنَيْنٍ إِذْ أَعْجَبَتْكُمْ كَثْرَتُكُمْ فَلَمْ تُغْنِ عَنكُمْ شَيْئًا). اسب هم با قدرت خدا برای ما می‌دود.  
+
+۳- بیان نشده که "فَاسْتَجَبْنَا لَهُ"، پس ممکن است دقیقاً آنچه که درخواست کرده به او داده نشده باشد.
+
+پی‌نوشت: در این قرائت توبیخی در کار نیست و شاهد مراحل رشد یک آدم خوب هستیم. در ابتدا خوب بود، در ادامه بهتر هم شد.</p>
+  </section>
+
+  <section>
+    <h2>ص ۲</h2>
+    <p>یک نظریه پردازی هم در مورد ماجرای داود (ع):
+
+یک مقدمه کوتاه: تسبیح ذکر سجده و رکوع است و حمد ذکر قیام (در نماز). تسبیح بیان این است که "خدا اینگونه نیست". حمد بیان این است که "خدا اینگونه است". حمد مختص آدم است که خلیفه الله است و همه اسماء را بلد است. ملائکه و غیره تسبیح میکنند. نَحْنُ نُسَبِّحُ بِحَمْدِكَ یعنی با حمد تو، تو را تسبیح میکنیم. توجه شود که تسبیح مطلق امکان پذیر نیست، پس هر تسبیحی به طور ضمنی حمدی هم دارد. ولی حمد خالص مخصوص خلیفه الله است. پس خلیفه الهی و قیام به وسیله کلیدواژه حمد (در مقابل تسبیح) با هم مرتبط اند.
+
+حالا اگر داستان داود (ع) رو در تقابل با داستان سلیمان (ع) قرار بدیم که بهش تذکری داده شد برای توجه بیشتر به بعد معنوی، به داود تذکری داده شد برای پرداختن بیشتر به "عمل". داود بسیار اهل تسبیح بود، مَعَهُ يُسَبِّحْنَ بِالْعَشِيِّ وَالْإِشْرَاقِ. اون دو خصم برای قضاوت بینشون وارد محراب شدن (حتی در محراب باز هم نبود و مجبور شدن از دیوار بیان) و داود از این ماجرا این تذکر رو برداشت کرد که من زیادی توی محراب هستم و بیشتر از این باید بیرون محراب باشم و "عمل" انجام بدم (به امورات مردم رسیدگی کنم). این ماجرا بیش از پیش داود رو از محراب بیرون آورد به سمت رسیدگی به امورات مردم (فَاحْكُم بَيْنَ النَّاسِ). و در این ماجرا داود از حالت تسبیح بلند شد و قیام کرد و خلیفه الله شد. برای همین هم در اون صحنه بینابینی به رکوع میفته و نه به سجود، یعنی در حالت قیام قرار گرفته بوده. چه بسا ذالاید هم از این جهت بیان شده که قابلیت عمل داشت (ید واسطه انجام عمل) و در این ماجرا  متذکر شد که بیشتر بالفعلش کنه.  
+
+تسبیح داود در اشراق و پرداختن سلیمان در عشی به اسب‌ها هم شاید تاکید میکنه بر اینکه لازم بود به اولی تذکر داده بشه که مراقب باش بیش از حد مشغول اعمال عبادی نشی و به دومی تذکر داده بشه که مراقب باش بیش از حد مشغول بعد عملی و مادی نشی. تسبیح بیشتر متناسب با عشی هست و پرداختن به امور اسب‌ها و امثالهم متناسب با اشراق.
+
+تذکر به داود برای استفاده بیشتر از یدش بود. و تذکر به سلیمان برای افزایش بصیرتش بود که در این اسباب مادی هم روح الهی رو خوب ببینه. و ابراهیم و اسحاق و یعقوب که خالص شده بودند، هم اهل ید بودن و هم اهل بصیرت.  أُولِي الْأَيْدِي وَالْأَبْصَارِ.
+
+تذکرهایی مثل وَلَا تَتَّبِعِ الْهَوَىٰ هم نیاز نداره اشاره به چیزی در گذشته داشته باشه به قول خارجی‌ها میتونه heads up باشه. مثلا تذکر این آیه که لااقل مخاطب اولش خود پیامبر (ص) است: وَ إِذا رَأَيْتَ الَّذِينَ يَخُوضُونَ فِي آياتِنا فَأَعْرِضْ عَنْهُمْ حَتَّى يَخُوضُوا فِي حَدِيثٍ غَيْرِهِ وَ إِمَّا يُنْسِيَنَّكَ الشَّيْطانُ فَلا تَقْعُدْ بَعْدَ الذِّكْرى‏ مَعَ الْقَوْمِ الظَّالِمِينَ
+
+و در مورد ۹۹ و ۱ هم شاید بگیم که برای این تذکر یک پرونده ساده زورگیری کفایت میکرد.
+
+پی نوشت: یک دوگانی دیگه هم هست که به نظرم جالب توجهه: در اولی داود فکر میکنه که مورد فتنه قرار گرفته، در دومی فتنه رو به عالم بالا نسبت میده و صراحتا میگه که فاعلش عالم بالا بوده.</p>
   </section>
 
 </body>
