--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@
     <p>در سوره نحل، ریشه‌های "نزل"، "خلق"، "جعل"، "نعمت" و "آیت" از طرف خدا هر کدام ۱۱ بار تکرار شده. همین طور عذب. هدی و کفر هم ۱۲ با آمده</p>
   </section>
 
+   <section>
+    <h2>ارادتمند</h2>
+    <p>تشکر میکنم از افرادی که به پیغام‌های ارسالی توجه کردن. دوستان و اساتید محترم، از اونجا که در گروهی‌هایی به این بزرگی (ماشاءالله)، از لحاظ زمانی، آمادگی ذهنی و ...، خیلی سخته که به تک‌تک پیغام‌ها بپردازم، با عرض پوزش معمولا روشم اینطور هست که هرگاه فکر کردم مطلبی هست که احتمالا ارزش به اشتراک گذاشتن رو داره، ارسال میکنم و لزوما به تک‌تک پیغام‌ها جداگانه پاسخ نمیدم. باز هم عذرخواهی میکنم خدای نکرده از روی کم اعتنایی نیست. خودتون تجربه‌ش رو دارید که بحث نوشتاری در گروهی به این بزرگی که کامنتها به صورت آسنکرون در زمان‌های مختلف هم میان چقدر زمان و انرژی میخواد. ان‌شاءالله بشه حضوری یا ویدیویی دور هم جمع بشیم و از این بحث‌ها بکنیم. ارادتمند
+
+(از ادمین محترم عذر میخوام بابت این پیغام. مجبور بودم بذارم که یهو پاسخ ندادنم به همه ریپلای‌های قبلی حمل بر بی‌ادبی نشه)</p>
+  </section>
+
   <section>
     <h2>ص ۱</h2>
     <p>برداشت بنده برگفته از جلسه سوم:
@@ -247,6 +254,62 @@
 
 پی نوشت: یک دوگانی دیگه هم هست که به نظرم جالب توجهه: در اولی داود فکر میکنه که مورد فتنه قرار گرفته، در دومی فتنه رو به عالم بالا نسبت میده و صراحتا میگه که فاعلش عالم بالا بوده.</p>
   </section>
+
+  <section>
+    <h2>ص ۳</h2>
+    <p>شاید یک خوانش کلی سوره این باشه که:
+
+باید أُولِي الْأَيْدِي وَالْأَبْصَارِ باشی. با تذکر به داستان داود متذکر میشی که یهو از "ید" کم استفاده نکنی (شاید هماهنگ با يَا أَيُّهَا الْمُدَّثِّرُ، قُمْ فَأَنذِرْ). با تذکر به داستان سلیمان متذکر میشی که یهو به باطن کم توجه نکنی (شاید هماهنگ با يَا أَيُّهَا الْمُزَّمِّلُ، قُمِ اللَّيْلَ). 
+
+در این مسیر مراقب موجودی به نام شیطان باش به دلیلی که آخر سوره توضیح داده شده. در درون خودت و به صورت شخصی مواظب باش که به سمت کم‌عملی یا کم‌توجهی به باطن نلغزوندت (با تذکری که به داود و سلیمان هم دادیم متذکر شو) و هرگاه حس کردی ممکنه لغزیده باشی برگرد (اوّاب باش). در خارج هم بر اذیت‌های دیگران صبر کن (اصْبِرْ عَلَىٰ مَا يَقُولُونَ). اینها هم ریشه‌ش در شیطان هست. یا شیطان مستقیما اذیت میکنه (گویا در ماجرای ایوب شیطان مستقیما امکان تصرف در این عالم رو پیدا کرده بوده) یا با واسطه اذیت میکنه (توسط افرادی که شیطان اغواشون کرده لَأُغْوِيَنَّهُمْ أَجْمَعِينَ)، که مصادیقش افراد اول سوره هستن. 
+
+نهایتا این اذیت‌های شیطون چی میشه؟ با توجه به دعای مطرح شده از سلیمان و نحوه اجابتش، احتمالش کمه که شرایط جوری بشه که شیاطین کامل بیان تحت کنترل خودت و در ظاهر و باطن از شرشون راحت بشی. و تا يَوْمِ الْوَقْتِ الْمَعْلُومِ هم فرصت داره و قرار نیست به این زودی‌ها بمیره. ولی در ظاهر حتی اگر در حد ایوب هم مغلوب شیطان شدی (مستقیم یا توسط افرادی که شیطان اغواشون کرده)، صبر کن. آخرش رو ما میتونیم خوش کنیم. و در باطن و عالم شخصی هم ما نمونه‌هایی از أُولِي الْأَيْدِي وَالْأَبْصَارِ سابق رو خالص کردیم (إِنَّا أَخْلَصْنَاهُم) و شیطان به باطن افراد خالص شده دیگه نمیتونه شری برسونه؛ إِلَّا عِبَادَكَ مِنْهُمُ الْمُخْلَصِينَ.
+
+و اون تذکر همیشگی کلی، ذکر آخرت هست که در قسمت‌های مختلف سوره بهش اشاره شده. و اون خالص شده‌ها و مصون شده‌ها از شر شیطان رو هم با همین ذکر خالص کردیم (إِنَّا أَخْلَصْنَاهُم بِخَالِصَةٍ ذِكْرَى الدَّارِ)</p>
+  </section>
+
+  <section>
+    <h2>ص ۴</h2>
+    <p>نمیدونم الآن چطوره ولی قبلنا یک کتاب رو که چاپ میکردن و بعد میدیدن یه غلط‌هایی توش هست، آخرش چند صفحه غلط‌نامه (تصحیح‌نامه) :) چاپ میکردن که توش اشاره کرده بود که فلان صفحه فلان‌جا باید اینطور اصلاح بشه.
+
+اونقدر که من فهمیدم، یکی از کارهایی که قرآن میکنه، تصحیح نسبت‌های بدی هست که اهل کتاب به انبیاء (ع) دادن. در قالب مطالبی که داره مطرح میکنه، اشاره‌ای به صحیح اون ماجرا داره و اینطور اون نسبت غلط رو نفی و تصحیح میکنه.
+
+به نظرم این کار رو خیلی خوب میشه در نمونه جمله معترضه وَمَا كَفَرَ سُلَيْمَانُ وَلَٰكِنَّ الشَّيَاطِينَ كَفَرُوا دید. من اون اوائل که اطلاع چندانی از داستان‌های بایبل نداشتم، وقتی این آیه رو میخوندم، این تکه‌ش برام تعجب برانگیز بود، "که اصلا چرا یه دفعه وسط جمله چنین چیز عجیبی با میزان اطلاعات صفر میگه (مَا كَفَرَ سُلَيْمَان!!!) که حتی یه مقدار روند تعریف کردن ماجرا رو هم با دست‌انداز مواجه میکنه".
+
+و البته همونطور که مقابل کفار و مشرکین برخی حرفهای مرکزی یا کلی یا نمونه‌هایی قابل تعمیم به یک مفهوم کلی یا ... رو مطرح میکنه و پاسخ میده، اینجا هم اون تهمتهایی که خیلی شنیع هستن رو بهشون میپردازه سلیمان، داود، دختران لوط و ... و نسخه درستش رو میگه. 
+
+حالا با این دید، باید در هنگام مواجهه با کتب و فرهنگ اهل کتاب همواره یک چشممون به قرآن باشه، همونطور که وقتی که یک کتاب که آخرش "تصحیح نامه" داشت، هنگام خوندنش همواره حواسمون به تصحیح‌نامه هم بود.
+
+و نهایتا این رو هم تاکید کنم که منظور این نیست که تنها کاربرد بیان اون مطالب لزوما فقط و فقط تصحیح تهمت‌های اهل کتاب باشه. این یک کاربردش هست. ولی کاربرد مهمی هست. بالاخص اگر یک نبی رو تجلی تام اسم خاصی از خداوند بدونیم، چنین تهمت‌هایی باید ازشون زدوده بشه، و نمیشه راحت از کنارش گذشت. حتی اگر تهمت بر مبنای بسیار سست و بی‌ربطی باشه، ولی وقتی در فرهنگ اهل کتاب (که خودشون دسته مهمی از خدا پرستان هستن) به طور جدی مطرح هست، باید پاسخش داده بشه و تصحیح بشه. مثل من‌در‌آوردی‌های ما جَعَلَ اللَّـهُ مِنْ بَحِيرَةٍ وَ لا سائِبَةٍ وَ لا وَصِيلَةٍ وَ لا حامٍ وَ لكِنَّ الَّذِينَ كَفَرُوا يَفْتَرُونَ عَلَى اللَّـهِ الْكَذِبَ وَ أَكْثَرُهُمْ لا يَعْقِلُونَ که وقتی جدی مطرح هست باید تصحیح بشه ولو اینکه هیچ پایه قابل توجهی نداره (اینطور نیست که حالا یکی یه چیز بی‌حساب کتابی گفت  ولش کنید بگذرید :) ). و البته توی قرآن آوردنش هم لااقل این فایده رو داره که به ملت با مثال نشون میده که ممکنه اصطلاحات خیلی جدی‌ای در جامعه مطرح باشه که اشاره به هیچ موضوع واقعی‌ای نداره. و در تصحیح اون داستان انبیاء (ع)، هم اونها رو درست میکنه و هم ممکنه داره میگه بقیه‌ش هم مواظب باشید ممکنه مشکل‌دار باشه؛ با احتیاط بخونید. و صرف انتقال این پیغام‌ها به نظرم انقدر مهم هست که به عنوان چند آیه در قرآن بهشون پرداخته بشه.</p>
+  </section>
+
+  <section>
+    <h2>ص ۵</h2>
+    <p>من در امتداد این خط فکری یه مطالب دیگری هم بافتم، با مسئولیت خودتون بخونید :))
+
+اگر 
+- داود رو نماد محراب/معنویت/ملکوت گرایی و سلیمان رو نماد حکومت/ظاهر/مُلک گرایی (هر دو برای خدا) بدونیم.
+
+- و اینکه آهن گویا ربطی به داود داره وَأَلَنَّا لَهُ الْحَدِيدَ و مس ربطی به سلیمان داره وَأَسَلْنَا لَهُ عَيْنَ الْقِطْرِ. 
+
+- و ذوالقرنین ربطی به آهن و مس با هم داره آتُونِي زُبَرَ الْحَدِيدِ ... آتُونِي أُفْرِغْ عَلَيْهِ قِطْرًا .
+
+شاید بتونیم بگیم ذوالقرنین جامع ملک‌وملکوت / ظاهروباطن با هم هست. و چه بسا اون دو "قرن" که داره همین دو ساحت هستن. برای همین منطبق با حقیقت هست و برای همین اختیار إِمَّا أَن تُعَذِّبَ وَإِمَّا أَن تَتَّخِذَ فِيهِمْ حُسْنًا بهش داده میشه.
+
+سد ذوالقرنین اصلش آهن و ملکوت و محراب هست، و مس و ملک و حکومت اون چیزی هست که حفظش میکنه (پوشش مسی جلوی زنگ زدن سد آهنی رو میگیره). شاید اینکه آهن از بالا نازل میشه وَأَنزَلْنَا الْحَدِيدَ و مس از پایین میجوشه وَأَسَلْنَا لَهُ عَيْنَ الْقِطْرِ تایید کننده ربطشون به ملکوت و مُلک باشه.
+
+حالا توی سوره ص، داره داود و سلیمان رو از دو طرف طیف سوق میده به سمت ذوالقرنین شدن. و البته هرکه این سوره بهش میرسه.
+
+توی سوره ص هم مثل سد ذوالقرنین، اصل ملکوت هست و با ملکوت شروع میشه (داود). بعد لایه‌های ملک روش میاد. یک مرحله داود میشه خَلِيفَةً فِي الْأَرْضِ (که میگن این فی‌الارض که بعد از خلیفه اومده گستره حکومت داود رو نشون میده. در مقابل إِنِّي جَاعِلٌ فِي الْأَرْضِ خَلِيفَةً که فی‌الارض قبل از خلیفه اومده و میگه پایتخت حکومت آدم زمین هست و نه صرفا گستره‌ش۱). پس یک لایه ملک روی ملکوت داود اومد. بعد بهش سلیمانی داده شد که مظهر ملک هست. و بعد خود سلیمان هم درخواست ملک میکنه هَبْ لِي مُلْكًا. و ملک خیلی ویژه‌ای هم بهش داده میشه. لایه‌های مسی که روی اصل آهنی کشیده میشه.
+
+و توی سوره همه هبه‌هایی که میشه مُلکی هست. به داود سلیمان هبه میشه، به سلیمان ملک ویژه. به ایوب زن و فرزند و ... . شاید از اینجا میاد که خدا باطن رو با خالص کردن از شیطان حفظ میکنه إِنَّا أَخْلَصْنَاهُم ... لَأُغْوِيَنَّهُمْ أَجْمَعِينَ ‎﴿٨٢﴾‏ إِلَّا عِبَادَكَ مِنْهُمُ الْمُخْلَصِينَ و ظاهر رو با هبه کردن ملک از شر شیطان نجات میده، یا در سطح حکومتی و پیشگیرانه مثل سلیمان که شیاطین رو به بند میکشه، یا در سطح فردی و درمانی مثل ایوب.
+
+۱- این قبل و بعد اومدن قید رو در دو ماجرای موسی (ع) و رسولان سوره یس هم داریم وَجَاءَ رَجُلٌ مِّنْ أَقْصَى الْمَدِينَةِ يَسْعَىٰ ---- وَجَاءَ مِنْ أَقْصَى الْمَدِينَةِ رَجُلٌ يَسْعَىٰ.
+
+پ.ن: شاید حتی اینکه اون افراد ریختن توی محراب داود (ع) یه تذکر دیگری هم برای داود داره که مراقب باش اگه خودت به اندازه کافی نری بیرون به حکومت و مردم رسیدگی کنی، از بیرون میان میریزن تو محرابت و فضای عبادتت رو هم از دست میدی :)</p>
+  </section>
+
+ 
 
 </body>
 </html>
