--- a/index.html
+++ b/index.html
@@ -309,7 +309,124 @@
 پ.ن: شاید حتی اینکه اون افراد ریختن توی محراب داود (ع) یه تذکر دیگری هم برای داود داره که مراقب باش اگه خودت به اندازه کافی نری بیرون به حکومت و مردم رسیدگی کنی، از بیرون میان میریزن تو محرابت و فضای عبادتت رو هم از دست میدی :)</p>
   </section>
 
- 
+  <section>
+    <h2>ص ۶</h2>
+    <p>بزرگوارید. متشکرم.
+
+خیلی جالبه. اگر مطالب بیشتری بود در این رابطه هروقت صلاح دونستید ارسال بفرمایید خیلی ممنون میشم.
+
+داخل پرانتز: به نظرم وقتی حدید رو مینویسیم آهن، یه لطمه جدی وارد میکنیم. حدس میزنم حدید با حدّ ربطی داشته باشه. یعنی مثلا چیزی هست که باش لبه باریک‌و‌دقیق (فَبَصَرُكَ الْيَوْمَ حَدِيدٌ) و سفت‌و‌سخت (كُونُوا حِجَارَةً أَوْ حَدِيدًا ‎﴿٥٠﴾‏ أَوْ خَلْقًا مِّمَّا يَكْبُرُ فِي صُدُورِكُمْ) ساخته میشه (در مقابل مثلا مس که چنین ویژگی‌ای رو نداره). هم اشاره به شمشیر و ... و هم اشاره به حدود الهی و ... . شاید الفاظ حاد الله و یحادد الله هم ربطی به حدید داشته باشن. در مورد لفظ قطر برای مس فعلا حدس خاصی ندارم.</p>
+  </section>
+
+  <section>
+    <h2>ص ۷</h2>
+    <p>به نظرم این دوگانی باطن‌وظاهر و ملکوت‌و‌ملک رو به ایمان‌وعمل تعمیم داد. پس در جمله إِلَّا الَّذِينَ آمَنُوا وَعَمِلُوا الصَّالِحَاتِ وَقَلِيلٌ مَّا هُمْ داود داره میگه ذوالقرنین‌ها که حق ایمان و عمل هر دو رو رعایت کنن چقدر کمند. و این وَقَلِيلٌ مَّا هُمْ انتظار هم میره چرا که دقیقا روی اون نقطه تعادل وایسادن چقدر سخت‌تر از متمایل شدن به یکی از دو طرف هست. (ایمان اینجا منظورم پذیرش تئوریک و مناسک مربوط به اون هست (تسبیح و ...) در مقابل عمل مادی مربوط به ارض: رتق و فتق امورات مردم و حکومت و ...)
+
+و جمله جُندٌ مَّا هُنَالِكَ مَهْزُومٌ مِّنَ الْأَحْزَابِ شاید داره میگه این اغوا شدگان توسط شیطان که درواقع agent شیطان شدن که شیطان از طریق اونا شرش رو میرسونه (شیاطین الانس)، مثل شیاطین دوره سلیمان تحت کنترل تو درمیان (و چه بسا بگیم خسارت‌هایی که به بار میارن رو هم ما مثل ایوب جبران خواهیم کرد). و فرم و محتوای این جمله خبر و وعده قطعی مُلکی به حضرت محمد (ص) هست.</p>
+  </section>
+
+ <section>
+    <h2>ص ۸</h2>
+    <p>در ادامه بافندگی بالا :)) إِنَّ كَثِيرًا مِّنَ الْخُلَطَاءِ لَيَبْغِي بَعْضُهُمْ عَلَىٰ بَعْضٍ با لفظ بغی ربط داره به مَرَجَ الْبَحْرَيْنِ يَلْتَقِيَانِ ‎﴿١٩﴾‏ بَيْنَهُمَا بَرْزَخٌ لَّا يَبْغِيَانِ و این هم ربط داره به وَإِذْ قَالَ مُوسَىٰ لِفَتَاهُ لَا أَبْرَحُ حَتَّىٰ أَبْلُغَ مَجْمَعَ الْبَحْرَيْنِ أَوْ أَمْضِيَ حُقُبًا و هماهنگ با نظریه مطرح شده اشاره داره به بحر ظاهر و باطن و این تذکر رو داره برای داود (ع) که ما مخلوط ظاهر و باطنیم (ظاهر و باطن در ما خلطاء هستن)، و این کار خیلی سختیه که کسی حق ظاهر و باطن رو دقیق به جا بیاره، مراقب باش به راحتی ممکنه در ما یکی از این بحرها بر اون یکی بغی کنه (مقداری بر اون یکی تجاوز کنه).</p>
+  </section>
+
+<section>
+    <h2>ص ۹</h2>
+    <p>به نظرم
+
+اذیت با واسطه توسط افراد اغوا شده توسط شیطان، از اونجا که پدیده معمولی‌تری هست، کلا برای ما پذیرشش راحت‌تر هست و هماهنگ هست با قسمت اول سوره که افرادی دارن پیامبر اسلام (ص) رو اذیت میکنن.
+
+ولی بر اساس داستان حضرت سلیمان (ع)  این احتمال رو هم میشه داد که تحت شرایطی یا در زمان‌هایی شیطان مستقیما اذیت کنه. شیاطینی که انقدر امکان تصرف فیزیکی داشتن که بنّایی کنن، خیلی دور از ذهن نیست که شرورهاشون سنگی رو هم به سمت آدمای خوب پرتاب کنن یا خلاصه یه اذیت فیزیکی مستقیم برسونن. البته شاید هم بگیم حضرت سلیمان (ع) (اشتثنائا) اصلا با فیزیکی کردن شیاطین تونستن اونها رو به زنجیر بکشن یا به بنایی و غواصی وادار کنن.
+
+البته بنده اطلاعات خاصی در این زمینه ندارم. صرفا به نظرم اومد در نگاه مقدماتی میشه هر دو رو برداشت کرد.</p>
+  </section>
+
+  <section>
+    <h2>ص ۱۰</h2>
+    <p>یک جستجو کردم در قرآن، لفظ داوود ۱۶ بار در ۱۶ آیه اومده و لفظ سلیمان ۱۷ بار در ۱۶ آیه که یک بارش همون جمله معترضه "وَمَا كَفَرَ سُلَيْمَانُ" هست که شاید بتونیم بگیم مستقلا اطلاعات خاصی نداره. شاید این تساوی در تکرار نشانه‌ای باشه که "داوود و سلیمان" یک دوتایی هست که باید در کتاب در تعادل قرار داشته باشه.
+
+اگر اون نظریه که در داوود وجه ملکوتی پررنگ‌تر است و در سلیمان وجه مُلکی رو فرض کنیم، و انتظار احتمالات منفی کلا در مُلک میره، همون جمله معترضه "وَمَا كَفَرَ سُلَيْمَانُ" در ترکیب با " أَوَلَمْ يَنظُرُوا فِي مَلَكُوتِ السَّمَاوَاتِ وَالْأَرْضِ وَمَا خَلَقَ اللَّهُ مِن شَيْءٍ وَأَنْ عَسَىٰ أَن يَكُونَ قَدِ اقْتَرَبَ أَجَلُهُمْ ۖ فَبِأَيِّ حَدِيثٍ بَعْدَهُ يُؤْمِنُونَ" (كَفَرَ در مقابل يُؤْمِنُونَ) هم داره تاکید مضاعفی میکنه که مُلک سلیمان مُلکی بر مبنای ملکوت بود.</p>
+  </section>
+
+  <section>
+    <h2>ص ۱۱</h2>
+    <p>مثل همیشه تشکر فراوان.
+
+دو تا نکته به ذهن بنده میاد. برای تقسیم بندی، اگر بر اساس عبارت "واذکر" سوره رو تقسیم بندی کنیم اینطور میشه:
+
+واذکر داوود ..... سلیمان ....
+واذکر ایوب
+واذکر ابراهیم و اسحاق و یعقوب
+واذکر اسماعیل و یسع و ذا الکفل
+
+و شاید اینطور باید داوود و سلیمان رو به عنوان یک بسته تحلیل کنیم. به علاوه اینکه شاید عبارت "وَوَهَبْنَا لِدَاوُودَ سُلَيْمَانَ" باز هم نشون میده که ماجرای سلیمان ادامه داوود هست؛ یعنی صرفا ۲ تا پیامبرِ پادشاهِ مستقل نیستن.
+
+در هماهنگی با فضای اواب بودن و توبه کردن در سوره، و اینکه در اون موارد میبینیم که بعد از توبه وضعشون از قبلش هم بهتر شد. در پایان با فردی مواجهیم (ابلیس) که به نظر میاد بش تذکر و فرصت داده شد ولی از اشتباهش توبه نکرد (برنگشت) و سقوط کرد. میشد تصور کرد بلافاصله پس از تمردش رانده بشه، پس شاید یکی از اهداف سوال "يَا إِبْلِيسُ مَا مَنَعَكَ أَن تَسْجُدَ لِمَا خَلَقْتُ بِيَدَيَّ ۖ أَسْتَكْبَرْتَ أَمْ كُنتَ مِنَ الْعَالِينَ " تذکر و فرصتی هست که بهش داده شد که برگرده.</p>
+  </section>
+
+   <section>
+    <h2>ص ۱۲</h2>
+    <p>تشکر از توجهتون.
+
+به نظرم چیزی بیش از صرف توالی زمانی میشه گفت. لازم به ذکره که ذکر و توبه اون ارتباط "ویژه" برای یک بسته بودن رو بین ماجرای داود و سلیمان برقرار نمیکنه چون در موارد دیگه هم بیان شده. صرف پادشاه بودن متوالی هم از همه اطلاعات "وَوَهَبْنَا لِدَاوُودَ سُلَيْمَانَ" استفاده نمیکنه. برای اون عبارتی مثل " و سلیمان من بعده" کافیه.
+
+به نظرم اون نظریه که 
+
+- در ماجرای داوود اینطور صحنه توصیف میشه که حاکمی هست صبح و شب مشغول تسبیح و این صحنه توصیف میشه که دو گروه برای اینکه بینشون قضاوت بشه مجبور میشن بیان توی محرابش، اونم نه از در بلکه از دیوار. و از این متذکر میشه
+
+- و سلیمان حاکمی هست که دم غروب هم مشغول اسب‌هاست و با جسد روی کرسی بهش تذکر داده میشه
+
+به طور منسجم‌تری نسبت به صرف توالی زمانی این دوتایی داود و سلیمان رو به هم ربط میده. داود سمت محرابی و ملکوتی هست و سلیمان سمت حکومتی و ملکی. داود این تذکر رو میگیره که مراقب باشه انگار فرمونش داره به راست میکشه، به سلیمان این تذکر داده میشه که مراقب باشه انگار فرمونش داره به چپ میکشه. و هردو سریع حواسشون رو جمع میکنن و روی همون خط مستقیم ادامه میدن.
+
+و  یک جاری شدنی از محراب و ملکوت به سمت حکومت و مُلک هم بیان میشه که "وَوَهَبْنَا لِدَاوُودَ سُلَيْمَانَ" یک مرحله‌ای از اون جریان هست: 
+
+- "شَدَدْنَا مُلْكَهُ وَآتَيْنَاهُ الْحِكْمَةَ وَفَصْلَ الْخِطَابِ" 
+
+- استفاده از اون حکمت و فصل الخطاب در مُلکش در ماجرای قضاوت برای صاحبان گوسفندان (شاید اصلا بگیم این اولین پرونده قضاوتی بوده که برای داوود آورده شده (هشدار: کاملا من‌درآوردی))
+
+- إِنَّا جَعَلْنَاكَ خَلِيفَةً فِي الْأَرْضِ فَاحْكُم بَيْنَ النَّاسِ بِالْحَقِّ
+
+- وَمَا خَلَقْنَا السَّمَاءَ وَالْأَرْضَ وَمَا بَيْنَهُمَا بَاطِلًا (با این توضیح که حق حاکم آسمان زمین و همه چیز هست و این رو ما به منصه ظهور هم میاریم و جایی برای باطل وجود نداره و جایی برای باطل نمیذاریم) (لفظ "حق" در عبارت قبل در مقابل "باطل" در این عبارت)
+
+- وَوَهَبْنَا لِدَاوُودَ سُلَيْمَانَ
+
+- هَبْ لِي مُلْكًا لَّا يَنبَغِي لِأَحَدٍ مِّن بَعْدِي
+
+- فَسَخَّرْنَا لَهُ الرِّيحَ تَجْرِي بِأَمْرِهِ رُخَاءً حَيْثُ أَصَابَ ‎﴿٣٦﴾‏ وَالشَّيَاطِينَ كُلَّ بَنَّاءٍ وَغَوَّاصٍ ‎﴿٣٧﴾‏ وَآخَرِينَ مُقَرَّنِينَ فِي الْأَصْفَادِ ‎﴿٣٨﴾‏ هَٰذَا عَطَاؤُنَا فَامْنُنْ أَوْ أَمْسِكْ بِغَيْرِ حِسَابٍ
+
+
+پ.ن.۱: یعنی اگر بخوایم ماجرا رو با یک تقریب کلی بگیم (همون تحلیل multi-scale (که بنده از شما یاد گرفتم 🙏🙏🙏))  که به جای تحلیل خطی، از کلیات (ضرایب ابتدایی wavelet) شروع میکنیم و بعد جزئیات (ضرایب بعدی wavelet) رو اضافه میکنیم، اینطور میشه:
+
+سلسله‌‌ای پادشاهی از بندگان ما. آنچنان اهل عبادت که بعضا برای گرفتن قضاوتشون مجبور میشدن به صورت نامتعارف وارد محراب بشن. متذکر شدن و بیشتر و بیشتر به مُلک پرداختند. همزمان ما بهشون تذکر دادیم که یهو بیش از حد مجذوب عوامل مُلکی (اسب‌ها) نشن (جسد روی کرسی). تذکر رو گرفتن و پس از اون مُلکشون رو گسترش خارق العاده‌ای دادیم.
+
+از محراب شروع کردن و همه ساحت مُلک رو تحت حکومت حق آوردن.
+
+ویژگی‌های جانبی: نه نیازی هست که بگیم داوود در محتوا یا فرم قضاوت اشتباه کرده، و نه نیازی هست بگیم حواس سلیمان از حق یا نماز پرت شده. ابتدا گفته شده از محراب خارج شو به سمت مُلک و بعد گفته شده مراقب باش مجذوب مُلک نشی.
+
+پ.ن.۲ : شاید در ترکیب "وَشَدَدْنَا مُلْكَهُ وَآتَيْنَاهُ الْحِكْمَةَ وَفَصْلَ الْخِطَابِ" و داستان ریختن توی محراب داوود و درخواست قضاوت ازش بگیم که مُلک در واقع برای داوود بود و حکمت و فصل الخطاب لازم رو هم داشت و اینجا صحنه‌ای رو میبینیم که مردم با شدّت و حدّت میان سراغش و ازش درخواست میکنن که بیاد عملا هم اعمال حاکمیت بکنه.
+
+پ.ن.۳: مشغول بودن داوود با پرندگان (که سر آدم را خیلی رو به آسمان میکنه) و مشغول بودن سلیمان با اسب‌ها (که سر آدم را رو به زمین نگه میداره) هم با تعبیر مطرح شده هماهنگ هست. شاید حتی با جزئیات بیشتر بگیم: دامنه دید ظاهری سلیمان متمرکز شده بود بین ساق تا گردن اسب‌ها برای جزئیات بیشتر در مورد داوود میشه بگیم تعبیر "پرندگانی که به داوود بازگشت میکردن"  تمرکز دید ظاهری داوود روی محدوده خودش (فرد خودش) تا آسمان رو تصویر میکنه. و هماهنگ هست با اینکه بعدا متذکر میشه به امورات جامعه.(حدود محور z رو مشخص کرده :) ).
+
+پ.ن.۴: این تعابیر که به داوود مرکزیتی میده و ماجرای سلیمان رو امتداد ماجرای داوود میبینه با اونکه فرمودید یکی از اسامی سوره داوود هست هم هماهنگه.</p>
+  </section>
+
+  <section>
+    <h2>ولی بایبل</h2>
+    <p>در مورد خفیف کردن اولیای الهی در بایبل که در سخنرانی مطرح شد: به نظر میاد براساس سوره مائده، بنی‌اسرائیل در مقابل اولیای الهی دچار دو طیف انحراف شدن. گروهی در مقابل اولیای الهی "فَرِيقاً كَذَّبُوا وَ فَرِيقاً يَقْتُلُونَ" (مائده ۷۰) که این در مذهبیاشون بیشتر در یهودی‌ها و جریانات مدعی "حسبنا کتاب الله" ظهور داره. و یک گروه که برای اون ولی الله، قائل به الوهیت شدن "قالُوا إِنَّ اللَّهَ هُوَ الْمَسِيحُ ابْنُ مَرْيَمَ" (مائده ۷۲) یا "قالُوا إِنَّ اللَّهَ ثالِثُ ثَلاثَةٍ" (مائده ۷۳) که در مسیحیت و غلّات ظهور داره.
+
+حالا گروه اول یک دُمی هم داره، افرادی که فرضا اون اولیای الهی رو در حدی پذیرفتن (لااقل در قالب یک پادشاه و حاکمی که باید در نظرش گرفت) ولی شخصیتش رو ترور کردن. و این رو در قالب ماجراهایی که برای سلیمان و داود و لوط و نوح و یعقوب و ... در بایبل ساختن میشه دید.
+
+
+در صورتی که قرآن تصویری که از اولیاء برای ما میسازه افرادی هستن با اختیاراتی مثل "فَامْنُنْ أَوْ أَمْسِكْ بِغَيْرِ حِسَابٍ" (ص ۳۹)، "إِمَّا أَن تُعَذِّبَ وَإِمَّا أَن تَتَّخِذَ فِيهِمْ حُسْنًا" (کهف ۸۶) یا تکلم خدا با اونها "كَلَّمَ اللَّهُ مُوسَىٰ تَكْلِيمًا" (نساء ۱۶۴)، یا مقامی که به موسی (ع) بگه "إِنَّكَ لَن تَسْتَطِيعَ مَعِيَ صَبْرًا" (کهف ۶۷) یا قدرت زنده کردن مردگان  "أُحْيِي الْمَوْتَىٰ" (آل عمران ۴۹ - مائده ۱۱۰)، زنده کردن مردگانی که در هم مخلوط شدن "ادْعُهُنَّ يَأْتِينَكَ سَعْيًا" (بقره ۲۶۰)، تبدیل مجسمه گلی پرنده به پرنده واقعی "أَنِّي أَخْلُقُ لَكُم مِّنَ الطِّينِ كَهَيْئَةِ الطَّيْرِ فَأَنفُخُ فِيهِ فَيَكُونُ طَيْرًا" (آل عمران ۴۹ - مائده ۱۱۰)، صحبت کردن با خودشون به جای عالم بالا "وَالسَّلَامُ عَلَيَّ يَوْمَ وُلِدتُّ وَيَوْمَ أَمُوتُ وَيَوْمَ أُبْعَثُ حَيًّا" (مریم ۳۳). و اینکه کار خیر برشون وحی میشه "أَوْحَيْنَا إِلَيْهِمْ فِعْلَ الْخَيْرَاتِ" (انبیاء ۷۳) (دقت شود که اوحینا الیهم ان افعلوا الخیرات نیست. خود "فعل" وحی میشه).
+
+و در عوالم بعدی وقتی در مورد "كِتَابَ الْفُجَّارِ" و "كِتَابَ الْأَبْرَارِ" صحبت میشه، با اینکه صحبت از مقربین هم مطرح هست ولی صحبتی از کتاب مقربین نیست! (سوره مطففین) یا حتی وقتی خداوند حضرت عیسی (ع) رو مورد سوال قرار میده، و حضرت عیسی (ع) به صورت یک عبد کاملا مودب پاسخ میدن، وقتی مسئله غلّات در مورد حضرت عیسی (ع) مطرح میشه، و  پرسیده میشه "أَأَنتَ قُلْتَ لِلنَّاسِ اتَّخِذُونِي وَأُمِّيَ إِلَٰهَيْنِ مِن دُونِ اللَّهِ" (مائده ۱۱۶)، در انتهای صحبت ایشون عرضه میدارن "إِن تُعَذِّبْهُمْ فَإِنَّهُمْ عِبَادُكَ ۖ وَإِن تَغْفِرْ لَهُمْ فَإِنَّكَ أَنتَ الْعَزِيزُ الْحَكِيمُ" (مائده ۱۱۸) (این جمله بسیار بسیار بسیار عجیب است) و کاملا مودبانه اشاره میکنن به مغفرت خداوند. (شاید یکی از عجیب‌ترین عبارات قرآن باشه. من شک داشتم این قسمت در مورد مکالمه خداوند با حضرت مسیح (ع) رو بذارم توی این متنم، ولی نهایتا گفتم خواننده خودش حواسش هست)
+
+
+
+پ.ن.۱: شیطان که دشمن آدم هست (اشاره به انتهای سوره ص)، شاید بگیم بزرگترین دست آوردی که میتونه داشته باشه، اینه که به آدم بقبولونه که خیلی چیز خاصی نیستی و توانمندی‌ها و استعدادهاش رو ازش پنهان کنه. به این وسیله آدم اصلا به دنبال بالفعل کردن اون استعدادها نمیره و اصلا چنان شکوفا شدنی رو در برنامه زندگیش قرار نمیده.
+
+کسایی که استعداد و توانایی‌های آدم رو باور نداشته باشن، در مقابل آدم‌هایی که "خلیفه الله" بودن رو تا حد زیادی بالفعل کردن،  دو جور رفتار میکنن: ۱- میگن این امکان نداره و این فرد حرفاش دروغه یا کارهاش شعبده بازیه ۲- میگن این فرد از آدمیزاد نیست و "از جنس خداست" ("پسر خدا"ست). نکته مشترک هر دو دیدگاه این هست که " آدم نمیتونه به چنین مقامی برسه".</p>
+  </section>
 
 </body>
 </html>
