--- a/index.html
+++ b/index.html
@@ -411,6 +411,66 @@
   </section>
 
   <section>
+    <h2>ص ۱۳</h2>
+    <p>چند روز پیش نظرم به آیه "وَالْجِبَالَ أَوْتَادًا" جلب شد. اگر این رو در کنار دو قسمت "وَفِرْعَوْنُ ذُو الْأَوْتَادِ" و "إِنَّا سَخَّرْنَا الْجِبَالَ مَعَهُ ..." از سوره ص در نظر بگیریم شاید داره یک چنین فضایی ترسیم میکنه:
+
+و فرعون (کوچولویی) که میخ‌‌هایی داشت. و ما میخ‌های زمین رو در تسخیر داوود درآورده بودیم :))
+
+به نظرم علاوه بر اینکه فرعون به چی میگفت اوتاد و اوتاد زمین در دست داوود بود، از یک جهت دیگه هم عبارت "فرعون کوچولو" بهتر مطلب بیان شده رو به فارسی میاره. فئران به عربی میشه موش‌ها. پس احتمالا برای یک فرد عرب که در همه زندگیش به موش‌ها میگفته فئران، وقتی، میشنوه "فرعون"، شبیه فارسی‌زبانی میمونه که بشنوه "مموشی" :)) یعنی اگر عبارت "وفرعون ذوالاوتاد" رو با حسش به فارسی بیاریم یه چیزی میشه شبیه: "و مموشی که صاحب میخ‌هایی بود" :))
+
+
+در کل به نظر میرسه اسامی افراد در قرآن یک سری placeholder مثل X نیستن که بشه با هر اسم دیگری جایگزینش کرد و کیفیت مطلب (قرآن) تغییر نکنه. همونطور که در پستی که اینجا بهش ارجاع دادم، صاحب پست بیان میکنن، عباراتی در قرآن داریم مثل:
+
+يَا أَسَفَىٰ عَلَىٰ يُوسُفَ
+أَسْلَمْتُ مَعَ سُلَيْمَانَ
+مَرْيَمَ ابْنَتَ عِمْرَانَ الَّتِي أَحْصَنَتْ فَرْجَهَا --- الَّذِينَ يَرْمُونَ الْمُحْصَنَاتِ (مریم --- یرمون)
+
+که نشون میدن اگر همه جا در قرآن لغت "یوسف" رو مثلا با "نادر" عوض کنیم، یا به جای لغت "مریم" بذاریم "محدثه" همین کیفیت کتاب به دست نمیاد. لااقل آیات بالا به این قشنگی نمیشه: یا اسفی علی نادر :(
+
+
+پ.ن.: در مورد فرعون و فئران خیلی ذوقی گفتم. خودم بیشتر حدس میزنم برای فهم استفاده فرعون بیشتر باید حوالی "ع ر ف" یا "ف ر ع" یا "ر ف ع" بگردیم. خودم نظر خاصی ندارم.</p>
+  </section>
+
+  <section>
+    <h2>ولی ص</h2>
+    <p>چون خداوند کمال مطلق هست، هر چیز "غیر خدا" که تصور میکنیم یا بش اشاره میکنیم یا ...، با داشتن نقصی از خداوند متمایز شده. دو تا چیز کامل مطلق که معنی نداره. بالاخره چه چیزی این دو تا رو کرده ۲ چیز؟!!! وقتی یکی کمال مطلقه، "اگر" اون یکی وجود داشته باشه، حتما یک چیزی کم داره که از اون کمال مطلق متمایزش کرده.
+
+این یک بحث درباره اونچه بین خدا و اولیای الهی برقراره. حالا اونچه که بین ما و اولیای الهی برقراره:
+
+در زمینه فیزیک، یک کودک دبستانی رو تصور کنیم و اینشتین:
+
+۱- آیا اینشتین همه فیزیک را بلد است؟
+خیر
+
+۲- آیا کودک دبستانی باید به همه حرف‌های اینشتین گوش کند و مجاز نیست در صحت و سقم آن تردید وارد کند؟
+بله
+
+حتی اگر اینشتین خودش هم بیاد بگه من در تئوریهام اشتباهاتی داشتم، باز هم فرقی برای اون کودک نمیکنه. چون یا اصلا موضوع اشتباه رو متوجه نمیشه یا اصلا اون اشتباه در ذهن اون کودک در دسته درست‌ها طبقه بندی شده. صرفا کودک از اون حرف اینشتین میفهمه که اینشتین هم همه فیزیک رو بلد نیست؛ ولی در تبعیت از اون یا یاد گرفتن فیزیک از اینشتین خللی ایجاد نمیشه. 
+
+و این فاصله اصناف آدم در زمینه عبودیت خداوند (خداشناسی تئوری و عملی) بسیار بیشتر است: وَلَلْآخِرَةُ أَكْبَرُ دَرَجَاتٍ وَأَكْبَرُ تَفْضِيلًا. باز در ظاهر، آدم بد و نیمه خوب و خوب یک قرابتی با هم دارن، ولی در باطن خیلی با هم متفاوتن. در فهم فیزیکی، کودک دبستانی و اینشتین با هم یه قرابتی دارن، در فهم باطن عالم خیلی تفاوت‌ها بیشتره.
+
+حالا در مورد گزاره "وَلَا تَتَّبِعِ الْهَوَىٰ" در سوره ص. اگر این گزاره رو به یکی که توی هالی‌وود کار میکنه بگیم، یک جور احتیاطی رو ازش برداشت میکنه. اگر به یک فردی که توی پنتاگون کار میکنه بگیم، برداشت میکنه که مراقب یک مدل کارهایی باشه. به آقای بهجت و قاضی هم بگیم، یک مدل احتیاط‌هایی میاد توی ذهنشون. اصلا این دو فرد آخر، چیزی که اون دو فرد اول توی ذهنشون میاد توی گزینه‌هاشون نیست. حتی ساحت نقص‌های اینشتین هم پاکه از اون چیزی که برای اون کودک اشتباه محسوب میشه، ساحت اونچه هم اولیای الهی در موردش مراقب هستن، پاک هست از اون چیزهایی که امثال من به عنوان اشتباه میشناسیمشون.
+
+موضوع اشاره "فَغَفَرْنَا لَهُ ذَٰلِكَ" هم برای ما مبهم هست، چون اصلا تا در ابعاد داوود نباشی نمیدونی موضوع چیه. اینشتین حتی اشتباهش در اون تئوری رو هم نمیتونه برای اون بچه دبستانی توضیح بده. چون ذهن و زبان اون بچه قابلیتش رو نداره. موضوع رو کلا متوجه نمیشه که حالا بخواد بفهمه اشتباهش کجا بوده. 
+
+مثل "فَأَوْحَىٰ إِلَىٰ عَبْدِهِ مَا أَوْحَىٰ" که یه تعبیر اینه که ما این همه حقایق رو نازل کردیم (پائین آوردیم، ساده کردیم) در قالب ذهن و زبان شما، در قالب قرآن و سخنان و افعال اولیای الهی، ولی این یکی دیگه در قالب فهم شما چیز نزدیکی نداره. نزدیک‌ترین چیزی که توی فضای شما میشه گفت اینه که "فَأَوْحَىٰ إِلَىٰ عَبْدِهِ مَا أَوْحَىٰ". و تازه اگر بگیم همه قرآن به واسطه جبرئیل نازل شده، اینجا چه بسا جبرئیل داره میگه "من فهمیدم یک چیزی به بنده‌اش گفت، نفهمیدم چی گفت" مثل اونجا که "یک چیزی که نفهمیدم چی بود سدره رو پوشاند" ("إِذْ يَغْشَى السِّدْرَةَ مَا يَغْشَىٰ").
+
+در مورد "فَغَفَرْنَا لَهُ ذَٰلِكَ" خود حضرت محمد (ص) و افراد سطح بالا قاعدتا متوجه میشن ذلک در داستان داوود داره به چی اشاره میکنه. ولی اون ساحت منزه است از اون چیزی که به عنوان اشتباه توی ذهن امثال من میاد.
+
+و البته از لحاظ هدایتی عبارت "وَلَا تَتَّبِعِ الْهَوَىٰ فَيُضِلَّكَ عَن سَبِيلِ اللَّهِ" همه رو هدایت میکنه و هر کس به این عبارت توجه میکنه هی بالا و بالاتر میره و در طی این بالا رفتن هی بیشتر هم متوجه میشه که ساحت داوود از چه جور نقص‌هایی پاک بوده؛ نقص‌هایی که یا قبل از اون اصلا موضوعش رو نمیشناخته، یا در دسته درست‌ها طبقه‌بندیش میکرده.
+
+پ.ن.۱: حالا اینطور فکر کنید که اصلا اونچیزی که از اول هم بیان شده بوده در مورد داوود همین عبارات سوره ص هست. قابل پایین‌تر آوردن نیست؛ جزئیات بیشتری ازش برای شما قابل فهم نیست. این عبارات افتاد دست یک بازنشسته پنتاگون که بعد از بازنشستگی توی هالی‌وود مشغول شده. داره میخونه ۹۹تا میش و ۱ میش - فغفرنا له ذلک - لا تتبع الهوی. آدمی که به اندازه کافی قلبش سالم باشه، ولا تتبع الهوی رو میگیره و پیش میره. ولی اگر بیش از حد قلبش مریض باشه، با توجه به بک‌گراندش اون داستان توی ذهنش شکل میبنده، مشهور و پولدار هم هست و حرفش بین مردم پخش میشه و هزاران سال ملت رو درگیر میکنه.
+
+پ.ن.۲. در مورد امثال این داستان بایبل به نظر من انقدر به وضوح شدت اعوجاج زیاده که چه‌بسا درست‌تر اینه که بگیم اطلاعات صفر از این کانال رد شده، بلکه بگیم اطلاعات صرفا برای گمراه کردن طرف مقصد درست شده (به معنی کاربرد لغت اعوجاج و کانال و اطلاعات و مقصد بین مهندسین مخابرات).
+
+بین امثال بنده با اولیا که هیچی، این فاصله‌ها بین خود اولیاء هم هست. یک مادری ۳ تا بچه‌ش شهید شدن، ۲تای دیگه مفقودالاثر هستن، اینطور که یعقوب برای یوسف بی‌تابی میکنه، بی‌تابی نمیکنه. اصلا پدربزرگ یعقوب با دست خودش بچه‌ش رو میخواست قربانی کنه، احوالش این نبود. یعقوب صرف یک پدر پسر از دست داده نیست. یوسف کسی هست که وقتی مراحل رشدش رو طی میکنه، از برادران یوسف گرفته تا خود یعقوب در مقابلش به سجده میفتن. یعنی یعقوب برای یک پادشاه سجده کرده؟! به نظرم این یادآور همون سجده اول خلقت آدمه.
+
+پ.ن.: البته برداشت‌های معمولی هم از این داستان‌ها مادامی که طرف داره ازش هدایتی دریافت میکنه مفیده. لزومی نداره یکی رو بگیریم و دیگری رو کنار بذاریم. درواقع توی برداشت‌های معمولی، یعقوب رو به عنوان یک آدم خوب معمولی توی ذهن داریم و ازش یاد میگیریم. هر چی برداشت عمیق‌تر میشه یعقوب به یعقوب اصلی که از دسته "وَجَعَلْنَاهُمْ أَئِمَّةً يَهْدُونَ بِأَمْرِنَا وَأَوْحَيْنَا إِلَيْهِمْ فِعْلَ الْخَيْرَاتِ ..." (خود انجام دادن کار خوب رو برشون وحی میکردیم، نه اینکه صرفا بگیم برید فلان کار خوب رو بکنید) هست نزدیک‌تر میشه.
+
+</p>
+  </section>
+
+  <section>
     <h2>ولی بایبل</h2>
     <p>در مورد خفیف کردن اولیای الهی در بایبل که در سخنرانی مطرح شد: به نظر میاد براساس سوره مائده، بنی‌اسرائیل در مقابل اولیای الهی دچار دو طیف انحراف شدن. گروهی در مقابل اولیای الهی "فَرِيقاً كَذَّبُوا وَ فَرِيقاً يَقْتُلُونَ" (مائده ۷۰) که این در مذهبیاشون بیشتر در یهودی‌ها و جریانات مدعی "حسبنا کتاب الله" ظهور داره. و یک گروه که برای اون ولی الله، قائل به الوهیت شدن "قالُوا إِنَّ اللَّهَ هُوَ الْمَسِيحُ ابْنُ مَرْيَمَ" (مائده ۷۲) یا "قالُوا إِنَّ اللَّهَ ثالِثُ ثَلاثَةٍ" (مائده ۷۳) که در مسیحیت و غلّات ظهور داره.
 
